--- a/nagsa/nagsa/Report21.rdlc
+++ b/nagsa/nagsa/Report21.rdlc
@@ -341,7 +341,7 @@
   <Width>6.5in</Width>
   <Page>
     <PageHeader>
-      <Height>0.9525cm</Height>
+      <Height>1.5616cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -366,6 +366,36 @@
           <rd:DefaultName>tanggal_pembelian</rd:DefaultName>
           <Height>0.6cm</Height>
           <Width>7.36833cm</Width>
+          <Style>
+            <Border>
+              <Style>None</Style>
+            </Border>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
+        <Textbox Name="Textbox1">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>LAPORAN PEMBELIAN PER TANGGAL</Value>
+                  <Style />
+                </TextRun>
+              </TextRuns>
+              <Style />
+            </Paragraph>
+          </Paragraphs>
+          <rd:DefaultName>Textbox1</rd:DefaultName>
+          <Top>0.82049cm</Top>
+          <Left>4.67588cm</Left>
+          <Height>0.6cm</Height>
+          <Width>6.46875cm</Width>
+          <ZIndex>1</ZIndex>
           <Style>
             <Border>
               <Style>None</Style>
